<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorSecondary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary">

        <TextView
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tvCreditCardTitle"
            android:text="@string/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <androidx.appcompat.widget.AppCompatImageView
            android:padding="@dimen/margin_mini"
            app:srcCompat="@drawable/ic_help"
            android:background="@drawable/bg_help_icon"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/tvCreditCardTitle"
            android:id="@+id/clCreditCardBack"
            android:layout_width="@dimen/width_credit_card"
            android:layout_height="@dimen/height_credit_card"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bg_credit_card_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >


            <View
                android:id="@+id/linCreditCardBarCode"
                android:layout_width="@dimen/width_credit_card_bar_code"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:background="@color/black"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:gravity="center"
                android:id="@+id/tvCreditCardOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_extra_large"
                tools:text="@string/hint_bank_card_name"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/linCreditCardBarCode"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCreditCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                tools:text="3034 \n\n 3433 \n\n 3434 \n\n 3434"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/linCreditCardBarCode"
                app:layout_constraintTop_toBottomOf="@id/tvCreditCardOwnerName" />


            <TextView
                android:textSize="@dimen/title_3"
                android:id="@+id/tvCreditCardExpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/str_expire"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/linCreditCardBarCode"
                app:layout_constraintTop_toBottomOf="@id/tvCreditCardNumber" />

            <TextView
                android:textSize="@dimen/title_3"

                android:id="@+id/tvCreditCardExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                tools:text="@string/hint_exp_date"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/linCreditCardBarCode"
                app:layout_constraintTop_toBottomOf="@id/tvCreditCardExpTitle" />


            <TextView
                android:textSize="@dimen/title_3"
                android:id="@+id/tvCreditCardCVV2Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/str_cvv2"
                android:textColor="@color/black"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCreditCardNumber" />


            <TextView
                android:textSize="@dimen/title_3"
                android:id="@+id/tvCreditCardCVV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                tools:text="@string/hint_cvv2"
                android:textColor="@color/black"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCreditCardCVV2Title" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCreditCardFront"
            android:layout_width="@dimen/width_credit_card"
            android:layout_height="@dimen/height_credit_card"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bg_credit_card_front"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreditCardTitle"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCreditCardBluLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_blue_bank_logo_type" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgCreditCardBluLogo"
                app:srcCompat="@drawable/ic_bank_but_lovely" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_rotate_bank_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/layout_credit_cord_bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>